--- a/package.json
+++ b/package.json
@@ -11,12 +11,23 @@
   "dependencies": {
     "axios": "^1.6.7",
     "canvas": "^2.11.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.3",
+    "express-rate-limit": "^7.2.0",
+    "express-session": "^1.18.0",
     "he": "^1.2.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.3",
-    "mongodb": "^6.2.0",
+    "mongodb": "^6.4.0",
+    "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "twemoji": "^14.0.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.12.0"
   }
 }
