--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
           sudo -i
-          cd /root/scout-beta
+          cd /home/scout-beta
           git pull origin main
           npm install
           pm2 restart 0
